Url removed and Added URI.Create()